// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> while user is anonymous renders proper layout for anonymous user 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-1"
    role="presentation"
    style="height: 100%;"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation2"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <div
          class="MuiTypography-root makeStyles-title-2 MuiTypography-h1 MuiTypography-noWrap"
        >
          <a
            class="makeStyles-titleLink-3"
            rel="home"
          >
            chess-player
          </a>
        </div>
        <div
          class="MuiBox-root MuiBox-root-7 makeStyles-colorToggler-4"
        >
          <label
            aria-label="Toggler color mode"
            data-testid="colorModeToggler"
            data-theme="LIGHT"
            for="colorModeToggler"
          >
            <span>
              Light
            </span>
            <span
              class="MuiSwitch-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-8 MuiSwitch-switchBase"
                title="Toggle theme"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-11 MuiSwitch-input"
                    id="colorModeToggler"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiSwitch-track"
              />
            </span>
            <span>
              Dark
            </span>
          </label>
        </div>
        <div
          class="makeStyles-menu-5"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
            href="https://github.com/findawayer/chess-player"
            rel="external noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            <span
              class="MuiButton-label"
            >
              GitHub
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Get started
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Sign in
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </header>
    <main
      class="MuiBox-root MuiBox-root-6"
    >
      ...
    </main>
  </div>
</div>
`;

exports[`<Layout /> while user is signed in renders proper layout for signed user. 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-45"
    role="presentation"
    style="height: 100%;"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation2"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <div
          class="MuiTypography-root makeStyles-title-46 MuiTypography-h1 MuiTypography-noWrap"
        >
          <a
            class="makeStyles-titleLink-47"
            rel="home"
          >
            chess-player
          </a>
        </div>
        <div
          class="MuiBox-root MuiBox-root-51 makeStyles-colorToggler-48"
        >
          <label
            aria-label="Toggler color mode"
            data-testid="colorModeToggler"
            data-theme="DARK"
            for="colorModeToggler"
          >
            <span>
              Light
            </span>
            <span
              class="MuiSwitch-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-52 MuiSwitch-switchBase PrivateSwitchBase-checked-53 Mui-checked"
                title="Toggle theme"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input-55 MuiSwitch-input"
                    id="colorModeToggler"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiSwitch-track"
              />
            </span>
            <span>
              Dark
            </span>
          </label>
        </div>
        <div
          class="makeStyles-menu-49"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
            href="https://github.com/findawayer/chess-player"
            rel="external noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            <span
              class="MuiButton-label"
            >
              GitHub
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Account
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Sign out
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </header>
    <main
      class="MuiBox-root MuiBox-root-50"
    >
      ...
    </main>
  </div>
</div>
`;
